Finished Stretch - Fixed Nav.

--- a/css/index.css
+++ b/css/index.css
@@ -166,6 +166,17 @@ nav {
   align-items: center;
   justify-content: center;
 }
+nav .fixed-nav {
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(156, 155, 155, 0.589);
+  border-radius: 5px;
+}
 @media (max-width: 500px) {
   nav {
     max-width: 100%;
@@ -180,10 +191,11 @@ nav div {
   font-size: 1.5rem;
   width: 50%;
   text-align: center;
+  margin-bottom: 1%;
 }
 @media (max-width: 500px) {
   nav div {
-    width: 57%;
+    width: 77%;
   }
 }
 nav div a {
@@ -205,6 +217,14 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.home {
+  margin-top: 5%;
+}
+@media (max-width: 500px) {
+  .home {
+    margin-top: 15%;
+  }
 }
 .home .intro h2 {
   padding: 15px;
