--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,11 @@
 // Home Content
 
 .home {
+  margin-top: 5%;
+
+  @media @phone {
+    margin-top: 15%;
+  }
 
   .intro {
 
